--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "ajax": "0.0.4",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "mapbox-gl": "^1.12.0",
     "mongoose": "^5.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
