--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "nodemailer": "^6.4.11"
   }
 }
