--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
-    "react-slick": "^0.27.10"
+    "react-slick": "^0.27.10",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
