--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "firebase": "^7.21.0",
     "mapbox-gl": "^1.12.0",
     "mongoose": "^5.10.2",
     "react": "^16.13.1",
