Added setup for Firebase, still needs troubleshooting

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "ajax": "0.0.4",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "firebase": "^7.21.0",
     "mapbox-gl": "^1.12.0",
