--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.10.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-slick": "^0.27.10",
